# ippot_bot

./: .gitignore  README.md  README_INSTRUCTION.md  attendance.xlsx  pyproject.toml  training_bot.py
